# book-club

./: .gitignore  Cargo.toml  README.md  books.mongodb  run_script.sh
frontend/: README.md
frontend/public/: index.html
frontend/src/: App.js
src/: main.rs
src/database/: book.rs  mod.rs  user.rs
src/routes/: book_api.rs  homepage.rs  mod.rs
templates/: base.html  book_detail.html  status_message.html
