[package]
name = "book-club"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket-include-tera = "0.5.4"
serde = "1.0.152"
serde_json = "1.0.93"
tera = "1.17.1"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"] 
